or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.19 - unreleased
        Rick WIdmer
        - update to aclocal 1.9.5, automake 1.9.5, autoconf 2.59 to match my system
        - Don't set LocalPort to a real port number so the default case has a chance 
          to identify how vchkpw was called.
	- ./configure tells status of onchange script setting

        Bill Shupp
	- enable-onchange-script defaults to no.  
	  NOTE: Still need to supress error message if file not found.
        - Fix bug in output format of list_alias

5.4.18 - released 30-Dec-06

        Joshua Megerman (offsides)
        - SQL backend fixes - NOTE: Requires database changes.  
          See UPGRADE for 5.4.18.  [1619489]
        - MySQL Tablename Backquotes - Add back quotes around table
          names so MySQL will allow names that start with a digit.
          [1619491]

	Drew
	- add .qmail-extension ability to vdelivermail
	- mods to Delivered-To: header to support .qmail-extension

	John Simpson
	- onchange - call a script when users or domains are changed
          see README.onchange.
        - cslogin - Compact and silent login options for vpopmaild
          note: don't blame John for problems in this, I changed a
          lot to make it fit with other changes. rww

	Tijs Zwinkels
	- vmysql: add missing mysql_free_result to fix mem leak.

	Tom Collins
	- vdelivermail: Add missing loop check.
	- vchangepw: Minor changes to Peter's error checking. [1573277]

	Rick Widmer  (rwidmer)
	- Multiple changes to vpopmaild:
	  Add rename_file command.
	  Expert mode works in vmoduser.     
	  Commands that are not yet implemented say so.
	  Blank input lines are not an error in vpopmaild.
	  Separate help before and after login in vpopmaild.
	  Allow 3 tries to login to vpopmaild.
	  Clean up if add_user fails because of bad user data.
	  Add termination code (.) to get_lastauth return.
	  Number the error messages (XXX) in vpopmaild